syntax = "proto3";
package raft.v1;

option go_package = "github.com/potix2/raft/v1/";

message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}